[package]
name = "awair-record"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sled = "0.34.6"
surf = { version = "2.2.0", features = ["h1-client-rustls"], default-features = false }
warp = "0.3.1"
tokio = { version = "1", features = ["full"] }
toml = "0.5.8"
log = "0.4.14"
env_logger = "0.8.4"
